--- a/index.html
+++ b/index.html
@@ -5,11 +5,51 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- ************* Hoja de estilos CSS ****************** -->
+    <link rel="stylesheet" href="../ComputodoFrontend/estilos.css">
+    <!-- ************************************** -->
 </head>
 <body>
     <header id="header">
-        <!-- place navbar here -->
+        <div class="encabezado">
+            <a href="index.html" > <img src="./imagenes/logo1.jpg" alt="logo de la tienda" class="img1"> </a>
+            <h1>CompuTodo < > </h1>
+        </div>
+            
+        <nav class="navegacion">
+            <!-- Menú principal -->
+            <ul class="menu" id="mi-menu-desplegable">
+                <li> <a href="##">Home</a> </li>
+                <!-- Menú desplegable -->
+                <li> <a href="##">Productos</a> 
+                        <ul class="submenu1">
+                            <li> <a href="./paginas/monitores.html">Monitores</a> </li>
+                            <li> <a href="./paginas/gabinetes.html">Gabinetes</a> </li>
+                            <li> <a href="./paginas/impresoras.html">Impresoras</a> </li>
+                            <li> <a href="./paginas/perifericos.html">Perifericos</a> </li>
+                            <li> <a href="./paginas/cables.html">Cables</a> </li>
+                            <!-- Revisar por si queremos agregar algo -->
+                        </ul>
+                </li>
+                <!-- Fin menú desplegable -->
+                <li> <a href="./paginas/ofertas.html">Ofertas</a> </li>
+                <li> <a href="./paginas/contacto.html">Contacto</a> </li>
+                <li> <a href="./paginas/dondeEstamos.html">Donde estamos</a> </li>
+                <li> <a href="##">Gestiones</a>
+                        <ul class="submenu2">
+                            <li> <a href="./productos.html">Gestión de Productos</a> </li>
+                            <li> <a href="">Gestión de Clientes</a> </li>
+                        </ul>
+                </li>
+            </ul>
+            <!-- Botón para buscar y buscador  -->
+            <div class="contenedor-buscador">
+                <input class="buscador" type="text" placeholder="Buscar">
+                <input class="boton1" type="submit" value="Buscar">
+            </div>
+        </nav>
     </header>
+    
     <main>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="container">
