correccion de rutas / imagenes / paginas

--- a/ComputodoFrontend/paginas/monitores.html
+++ b/ComputodoFrontend/paginas/monitores.html
@@ -67,7 +67,7 @@
         <div>
             <a class="linkProducto"href="./detalle.html">
                 <div class="producto">
-                    <img src="../" alt="monitor">
+                    <img src="../imagenes/imgproductos/monitor-acer.jpg" alt="monitor">
                     <div class="info">
                         <span class="precio">$48.379</span>
                         <span class="envio">Envío gratis</span>
