--- a/productos.html
+++ b/productos.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Title</title>
+    <title>Productos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -60,7 +60,7 @@
     
     <main>
         <div id="app" class="container">
-            <h1>Productos</h1>
+            <h1>Gestión de Productos</h1>
             <br>
             <a  class="btn btn-primary" href="producto_nuevo.html">Nuevo</a>
             <br><br>
@@ -101,8 +101,8 @@
                                     </td>
                                     <td>{{producto.ubicacion}}</td>
                                     <td>
-                    			<a class="btn btn-primary" :href="'producto_update.html?id='+ producto.id" >Editar</a>
-                                      <button type="button" class="btn btn-danger" v-on:click="eliminar(producto.id)" >Eliminar</button>
+                    			<a class="btn editar" :href="'producto_update.html?id='+ producto.id" >Editar</a>
+                                      <button type="button" class="btn eliminar" v-on:click="eliminar(producto.id)" >Eliminar</button>
                                     </td>
                                 </tr>
                             </tbody>
