Modificación de estilos en las páginas de nuevo y edición de productos

--- a/producto_update.html
+++ b/producto_update.html
@@ -95,8 +95,12 @@
         <label for="nombre">Ubicación</label>
         <input type="text" name="ubicacion" id="ubicacion" v-model="ubicacion">
       </div>
-      <button type="button" class="btn btn-success" v-on:click="modificar()">Grabar</button>
-      </form>
+      
+      <div class="botonGrabar">
+        <button type="button" class="btn btn-success" v-on:click="modificar()">Grabar</button>
+      </div>
+    
+    </form>
     </div>
   </main>
   
